--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,17 @@
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/mana-matrix.css') }}">
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Mana Matrix</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- Correct Toggler Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-
                 <li class="nav-item">
                     <a class="nav-link" href="/commanders">Commanders</a>
                 </li>
@@ -24,26 +21,55 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/topcards">Top Cards</a>
                 </li>
-                <!-- DROPDOWN FOR FORMAT CHANGER -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Formats
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="/format/Brawl">Brawl</a></li>
                         <li><a class="dropdown-item" href="/format/cEDH">cEDH</a></li>
                         <li><a class="dropdown-item" href="/format/pEDH">pEDH</a></li>
-                        
-                        
                     </ul>
                 </li>
-
-
-
             </ul>
+
+            
+            <form action="/search" method="POST" class="d-flex">
+                <input class="form-control me-2" type="search" name="cards" id="search-box" 
+                       placeholder="Search Cards..." aria-label="Search" list="search-suggestions">
+                <datalist id="search-suggestions"></datalist>
+                <button class="btn btn-outline-light" type="submit">Search</button>
+            </form>
+            
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    const searchBox = document.getElementById("search-box");
+                    const dataList = document.getElementById("search-suggestions");
+                    const knownValues = {{ known_values | tojson | safe }};  // Pass known values as JSON safely
+            
+                    searchBox.addEventListener("input", function () {
+                        const query = searchBox.value.toLowerCase();
+                        dataList.innerHTML = ""; // Clear previous suggestions
+                        
+                        if (query.length > 0) { // Only show suggestions if the user has typed something
+                            const filteredValues = knownValues.filter(val => val.toLowerCase().includes(query));
+                            
+                            filteredValues.forEach(val => {
+                                let option = document.createElement("option");
+                                option.value = val;
+                                dataList.appendChild(option);
+                            });
+                        }
+                    });
+                });
+            </script>
+            
+            
+            
         </div>
     </div>
-</nav> 
+</nav>
 <!-- include the favicons from static / images / favicon-->
 
 <head>
@@ -54,5 +80,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon/favicon-16x16.png') }}">
     <link rel="manifest" href="{{ url_for('static', filename='images/favicon/site.webmanifest') }}">
+
+    
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mana-matrix.css') }}">
 
 </head>
