--- a/static/css/mana-matrix.css
+++ b/static/css/mana-matrix.css
@@ -254,3 +254,15 @@ body {
   body {
     padding-top: 56px;
 }
+
+.custom-container {
+  width: 100%;
+  padding: 0 15px; /* Default padding for small screens */
+}
+
+@media (min-width: 992px) { /* Applies only on desktops */
+  .custom-container {
+      max-width: 1200px;
+      margin: 0 auto;
+  }
+}
