add loading messages

--- a/templates/card.html
+++ b/templates/card.html
@@ -13,7 +13,7 @@ add bootstrap
 </head>
 
 <body >
-    
+    {% include 'loading.html' %}
     {% include 'commanders_using_this.html' %}
     {% include 'this_cards_decks.html' %}
     {% include 'decks_that_use_this_card.html' %}
