--- a/templates/commanders.html
+++ b/templates/commanders.html
@@ -4,6 +4,8 @@ add bootstrap
 
 {% include 'header.html' %}
 
+{% include 'loading.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,7 +40,7 @@ add bootstrap
                     <div class="card-body">
                         <h5 class="card-title">{{ commander[0] }}</h5>
                         <p class="card-text">{{ commander[4] }} Decks</p>
-                        <a href="/card/{{ commander[1] }}" class="btn btn-primary">Details</a>
+                        <a href="/card/{{ commander[1] }}" class="btn btn-primary" onclick="showLoading()">Details</a>
                     </div>
                 </div>
             </div>
